[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anlis"
version = "0.1.3"
authors = [
  { name="dxstiny", email="dxstiny.gh@gmail.com" },
]
description = "analysis library for python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dxstiny/anlis"
"Bug Tracker" = "https://github.com/dxstiny/anlis/issues"

[classifiers]
"Typing :: Typed" = "True"

[package]
include = ["py.typed"]
